created and moved images to img

--- a/ca-fire-final.ipynb
+++ b/ca-fire-final.ipynb
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1189,7 @@
     "ax.set_ylim(10**3, 10**6)\n",
     "\n",
     "plt.show()\n",
-    "fig.savefig(time-vs-acres-scat)"
+    "fig.savefig('time-vs-acres-scatter.png')"
    ]
   },
   {
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -1353,7 +1353,9 @@
     "    ax.legend()\n",
     "    ax.set_title('Posterior Probabilities of a Major Incident by Year')\n",
     "    ax.set_xlabel('p')\n",
-    "    ax.set_ylabel('pdf')"
+    "    ax.set_ylabel('pdf')\n",
+    "\n",
+    "fig.savefig('posterior-plots.png')"
    ]
   },
   {
