--- a/src/ca-fire-final.ipynb
+++ b/src/ca-fire-final.ipynb
@@ -638,15 +638,22 @@
     "# Create gif of interactive map.\n",
     "images = []\n",
     "filenames = ['../img/2013.png', '../img/2014.png', '../img/2015.png', '../img/2016.png', '../img/2017.png', '../img/2018.png', '../img/2019.png']\n",
-    "with imageio.get_writer('../img/num-fires.gif', mode='I', duration=1) as writer:\n",
+    "with imageio.get_writer('../img/num-fires.gif', mode='I', duration=2) as writer:\n",
     "    for filename in filenames:\n",
     "        image = imageio.imread(filename)\n",
     "        writer.append_data(image)"
    ]
   },
   {
+   "source": [
+    "## Bar Graphs"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
